add paddings to header & footer

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <form action="">
                 <P class="location">選擇地區</P>
                 <select name="" id="">
-                    <option value="">台北市</option>
-                    <option value="">台中市</option>
-                    <option value="">高雄市</option>
+                    <option value="台北市">台北市</option>
+                    <option value="台中市">台中市</option>
+                    <option value="高雄市">高雄市</option>
                 </select>
             </form>
             <ul class="where">
